--- a/abortionaid/.env
+++ b/abortionaid/.env
@@ -5,7 +5,7 @@ LLAMA_CLOUD_API_KEY=llx-Ocvu5zrUAAolyzIkuqEXfMTJFRVi70DFg8vXnYYCb02y0VMI
 MODEL_PROVIDER=openai
 
 # The name of LLM model to use.
-MODEL=gpt-3.5-turbo
+MODEL=gpt-4
 
 # Name of the embedding model to use.
 EMBEDDING_MODEL=text-embedding-3-large
